fix: increase z-index so modal above header

--- a/packages/styles/dialog.css
+++ b/packages/styles/dialog.css
@@ -15,7 +15,7 @@
   --dialog-vertical-offset: 4rem;
   --dialog-bottom-spacing: 1.875rem;
   --dialog-content-line-height: inherit;
-  --dialog-z-index: auto;
+  --dialog-z-index: 25;
 }
 
 .cauldron--theme-dark {
